--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,3 +14,5 @@ jobs:
 
       - name: Run yamllint
         uses: ansible-actions/yamllint-action@v0.0.2
+        with:
+          target: ".github/workflows/deploy.yml"
